5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2503.log
== TEST (2019-05-09 18:23:08) 
-- CODE:
n=int(input("digite n: "))
cont=1
div=-1
soma=0
while(cont<=n:
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))
-- ERROR:
File "XXXX", line 5
    while(cont<=n:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:20) 
-- CODE:
n=int(input("digite n: "))
cont=1
div=-1
soma=0
while(cont<=n)
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))
-- ERROR:
File "XXXX", line 5
    while(cont<=n)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:26) 
-- CODE:
n=int(input("digite n: "))
cont=1
div=-1
soma=0
while(cont<=n):
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:44) 
-- CODE:
n=int(input("digite n: "))
cont=1
div=-1
soma=0
while(cont<=n):
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:23:51) 
-- CODE:
n=int(input("digite n: "))
cont=1
div=-1
soma=0
while(cont<=n):
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))
-- EXECUTION TIME:
0.162327
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
